# batch-impl-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
examples/: ds_tests.rs  macro_tests.rs  tests.rs
src/: apply.rs  codegen.rs  lib.rs  parse.rs  types.rs
src/core/: caret.rs  codegen.rs  dash.rs  mod.rs  parser.rs  recursion.rs  tuple.rs  types.rs  utils.rs
