[package]
name = "batch-impl"
version = "0.1.1"
edition = "2021"
authors = ["5-6-1"]
description = "A proc-macro library for batch generating trait impls with a powerful DSL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/5-6-1/batch-impl-rs"
homepage = "https://github.com/5-6-1/batch-impl-rs"
documentation = "https://docs.rs/batch-impl"
readme = "README.md"
keywords = ["macro", "trait", "impl", "batch", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
